Ensure the cart message is visible
This will allow you to scroll the sidebar if the content is too long (typically
if there is tier pricing or a bunch of attributes to display).

Previously, you would have to scroll to the very bottom of the page.

--- a/app/design/frontend/Travers/default/SomethingDigital_ReactPLP/styles/components/_productInfo.scss
+++ b/app/design/frontend/Travers/default/SomethingDigital_ReactPLP/styles/components/_productInfo.scss
@@ -47,6 +47,12 @@
       &.list-message {
         display: none;
       }
+
+      &--inner {
+        height: 100vh;
+        overflow-y: scroll;
+        margin-bottom: 150px;
+      }
     }
   }
 
